--- a/TestModule_dialog_base.ui
+++ b/TestModule_dialog_base.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>344</width>
-    <height>162</height>
+    <width>351</width>
+    <height>193</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -16,8 +16,8 @@
   <widget class="QDialogButtonBox" name="button_box">
    <property name="geometry">
     <rect>
-     <x>60</x>
-     <y>100</y>
+     <x>70</x>
+     <y>150</y>
      <width>181</width>
      <height>32</height>
     </rect>
@@ -29,84 +29,97 @@
     <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
    </property>
   </widget>
-  <widget class="QLabel" name="HighLabel">
+  <widget class="QGroupBox" name="RasterInfo">
    <property name="geometry">
     <rect>
-     <x>30</x>
-     <y>70</y>
-     <width>111</width>
-     <height>16</height>
+     <x>20</x>
+     <y>0</y>
+     <width>311</width>
+     <height>131</height>
     </rect>
    </property>
-   <property name="text">
-    <string>Altezza</string>
+   <property name="title">
+    <string>Raster Info</string>
    </property>
-  </widget>
-  <widget class="QLabel" name="WidthLabel">
-   <property name="geometry">
-    <rect>
-     <x>170</x>
-     <y>70</y>
-     <width>111</width>
-     <height>16</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>Larghezza</string>
-   </property>
-  </widget>
-  <widget class="QSpinBox" name="highInput">
-   <property name="geometry">
-    <rect>
-     <x>100</x>
-     <y>60</y>
-     <width>53</width>
-     <height>25</height>
-    </rect>
-   </property>
-  </widget>
-  <widget class="QSpinBox" name="widthInput">
-   <property name="geometry">
-    <rect>
-     <x>250</x>
-     <y>60</y>
-     <width>53</width>
-     <height>25</height>
-    </rect>
-   </property>
-  </widget>
-  <widget class="QLabel" name="label">
-   <property name="geometry">
-    <rect>
-     <x>40</x>
-     <y>30</y>
-     <width>56</width>
-     <height>13</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>PixSize</string>
-   </property>
-  </widget>
-  <widget class="QDoubleSpinBox" name="pixsizex">
-   <property name="geometry">
-    <rect>
-     <x>110</x>
-     <y>20</y>
-     <width>62</width>
-     <height>25</height>
-    </rect>
-   </property>
-  </widget>
-  <widget class="QDoubleSpinBox" name="pixsizey">
-   <property name="geometry">
-    <rect>
-     <x>190</x>
-     <y>20</y>
-     <width>62</width>
-     <height>25</height>
-    </rect>
-   </property>
+   <widget class="QSpinBox" name="widthInput">
+    <property name="geometry">
+     <rect>
+      <x>240</x>
+      <y>90</y>
+      <width>53</width>
+      <height>31</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QLabel" name="WidthLabel">
+    <property name="geometry">
+     <rect>
+      <x>160</x>
+      <y>100</y>
+      <width>111</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Larghezza</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="HighLabel">
+    <property name="geometry">
+     <rect>
+      <x>20</x>
+      <y>100</y>
+      <width>111</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Altezza</string>
+    </property>
+   </widget>
+   <widget class="QSpinBox" name="highInput">
+    <property name="geometry">
+     <rect>
+      <x>90</x>
+      <y>90</y>
+      <width>53</width>
+      <height>31</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QDoubleSpinBox" name="pixsizey">
+    <property name="geometry">
+     <rect>
+      <x>200</x>
+      <y>40</y>
+      <width>62</width>
+      <height>31</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QDoubleSpinBox" name="pixsizex">
+    <property name="geometry">
+     <rect>
+      <x>120</x>
+      <y>40</y>
+      <width>62</width>
+      <height>31</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label">
+    <property name="geometry">
+     <rect>
+      <x>50</x>
+      <y>50</y>
+      <width>56</width>
+      <height>13</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>PixSize</string>
+    </property>
+   </widget>
   </widget>
  </widget>
  <resources/>
