--- a/TestModule_dialog.ui
+++ b/TestModule_dialog.ui
@@ -6,12 +6,9 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>361</width>
-    <height>360</height>
+    <width>418</width>
+    <height>488</height>
    </rect>
-  </property>
-  <property name="cursor">
-   <cursorShape>PointingHandCursor</cursorShape>
   </property>
   <property name="windowTitle">
    <string>TestModule</string>
@@ -19,9 +16,9 @@
   <widget class="QDialogButtonBox" name="button_box">
    <property name="geometry">
     <rect>
-     <x>90</x>
-     <y>320</y>
-     <width>181</width>
+     <x>50</x>
+     <y>440</y>
+     <width>341</width>
      <height>32</height>
     </rect>
    </property>
@@ -35,15 +32,25 @@
   <widget class="QGroupBox" name="groupBox">
    <property name="geometry">
     <rect>
-     <x>20</x>
+     <x>30</x>
      <y>10</y>
-     <width>321</width>
-     <height>51</height>
+     <width>361</width>
+     <height>61</height>
     </rect>
    </property>
    <property name="title">
-    <string>Raster 1</string>
+    <string/>
    </property>
+   <widget class="QLineEdit" name="inputL1">
+    <property name="geometry">
+     <rect>
+      <x>90</x>
+      <y>20</y>
+      <width>261</width>
+      <height>31</height>
+     </rect>
+    </property>
+   </widget>
    <widget class="QLabel" name="label">
     <property name="geometry">
      <rect>
@@ -54,32 +61,32 @@
      </rect>
     </property>
     <property name="text">
-     <string>Raster</string>
-    </property>
-   </widget>
-   <widget class="QLineEdit" name="inputL1">
-    <property name="geometry">
-     <rect>
-      <x>80</x>
-      <y>20</y>
-      <width>231</width>
-      <height>21</height>
-     </rect>
+     <string>Raster 1</string>
     </property>
    </widget>
   </widget>
   <widget class="QGroupBox" name="groupBox_2">
    <property name="geometry">
     <rect>
-     <x>20</x>
-     <y>60</y>
-     <width>321</width>
-     <height>51</height>
+     <x>30</x>
+     <y>80</y>
+     <width>361</width>
+     <height>61</height>
     </rect>
    </property>
    <property name="title">
-    <string>Raster 2</string>
+    <string/>
    </property>
+   <widget class="QLineEdit" name="inputL2">
+    <property name="geometry">
+     <rect>
+      <x>90</x>
+      <y>20</y>
+      <width>261</width>
+      <height>31</height>
+     </rect>
+    </property>
+   </widget>
    <widget class="QLabel" name="label_2">
     <property name="geometry">
      <rect>
@@ -90,32 +97,32 @@
      </rect>
     </property>
     <property name="text">
-     <string>Raster</string>
-    </property>
-   </widget>
-   <widget class="QLineEdit" name="inputL2">
-    <property name="geometry">
-     <rect>
-      <x>82</x>
-      <y>20</y>
-      <width>231</width>
-      <height>21</height>
-     </rect>
+     <string>Raster 2</string>
     </property>
    </widget>
   </widget>
   <widget class="QGroupBox" name="groupBox_3">
    <property name="geometry">
     <rect>
-     <x>20</x>
-     <y>110</y>
-     <width>321</width>
-     <height>51</height>
+     <x>30</x>
+     <y>150</y>
+     <width>361</width>
+     <height>61</height>
     </rect>
    </property>
    <property name="title">
-    <string>Raster 3</string>
+    <string/>
    </property>
+   <widget class="QLineEdit" name="inputL3">
+    <property name="geometry">
+     <rect>
+      <x>90</x>
+      <y>20</y>
+      <width>261</width>
+      <height>31</height>
+     </rect>
+    </property>
+   </widget>
    <widget class="QLabel" name="label_3">
     <property name="geometry">
      <rect>
@@ -126,32 +133,32 @@
      </rect>
     </property>
     <property name="text">
-     <string>Raster</string>
-    </property>
-   </widget>
-   <widget class="QLineEdit" name="inputL3">
-    <property name="geometry">
-     <rect>
-      <x>80</x>
-      <y>20</y>
-      <width>231</width>
-      <height>21</height>
-     </rect>
+     <string>Raster 3</string>
     </property>
    </widget>
   </widget>
   <widget class="QGroupBox" name="groupBox_4">
    <property name="geometry">
     <rect>
-     <x>20</x>
-     <y>160</y>
-     <width>321</width>
-     <height>51</height>
+     <x>30</x>
+     <y>220</y>
+     <width>361</width>
+     <height>61</height>
     </rect>
    </property>
    <property name="title">
-    <string>Raster 4</string>
+    <string/>
    </property>
+   <widget class="QLineEdit" name="inputL4">
+    <property name="geometry">
+     <rect>
+      <x>90</x>
+      <y>20</y>
+      <width>261</width>
+      <height>31</height>
+     </rect>
+    </property>
+   </widget>
    <widget class="QLabel" name="label_4">
     <property name="geometry">
      <rect>
@@ -162,32 +169,32 @@
      </rect>
     </property>
     <property name="text">
-     <string>Raster</string>
-    </property>
-   </widget>
-   <widget class="QLineEdit" name="inputL4">
-    <property name="geometry">
-     <rect>
-      <x>82</x>
-      <y>20</y>
-      <width>231</width>
-      <height>21</height>
-     </rect>
+     <string>Raster 4</string>
     </property>
    </widget>
   </widget>
   <widget class="QGroupBox" name="groupBox_5">
    <property name="geometry">
     <rect>
-     <x>20</x>
-     <y>210</y>
-     <width>321</width>
-     <height>51</height>
+     <x>30</x>
+     <y>290</y>
+     <width>361</width>
+     <height>61</height>
     </rect>
    </property>
    <property name="title">
-    <string>Raster 5</string>
+    <string/>
    </property>
+   <widget class="QLineEdit" name="inputL5">
+    <property name="geometry">
+     <rect>
+      <x>90</x>
+      <y>20</y>
+      <width>261</width>
+      <height>31</height>
+     </rect>
+    </property>
+   </widget>
    <widget class="QLabel" name="label_5">
     <property name="geometry">
      <rect>
@@ -198,32 +205,32 @@
      </rect>
     </property>
     <property name="text">
-     <string>Raster</string>
-    </property>
-   </widget>
-   <widget class="QLineEdit" name="inputL5">
-    <property name="geometry">
-     <rect>
-      <x>80</x>
-      <y>20</y>
-      <width>231</width>
-      <height>21</height>
-     </rect>
+     <string>Raster 5</string>
     </property>
    </widget>
   </widget>
   <widget class="QGroupBox" name="groupBox_6">
    <property name="geometry">
     <rect>
-     <x>20</x>
-     <y>260</y>
-     <width>321</width>
-     <height>51</height>
+     <x>30</x>
+     <y>360</y>
+     <width>361</width>
+     <height>61</height>
     </rect>
    </property>
    <property name="title">
-    <string>Raster 6</string>
+    <string/>
    </property>
+   <widget class="QLineEdit" name="inputL6">
+    <property name="geometry">
+     <rect>
+      <x>90</x>
+      <y>20</y>
+      <width>261</width>
+      <height>31</height>
+     </rect>
+    </property>
+   </widget>
    <widget class="QLabel" name="label_6">
     <property name="geometry">
      <rect>
@@ -234,21 +241,44 @@
      </rect>
     </property>
     <property name="text">
-     <string>Raster</string>
-    </property>
-   </widget>
-   <widget class="QLineEdit" name="inputL6">
-    <property name="geometry">
-     <rect>
-      <x>80</x>
-      <y>20</y>
-      <width>231</width>
-      <height>21</height>
-     </rect>
+     <string>Raster 6</string>
     </property>
    </widget>
   </widget>
  </widget>
  <resources/>
- <connections/>
+ <connections>
+  <connection>
+   <sender>button_box</sender>
+   <signal>accepted()</signal>
+   <receiver>testDialogBase</receiver>
+   <slot>accept()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>20</x>
+     <y>20</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>20</x>
+     <y>20</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>button_box</sender>
+   <signal>rejected()</signal>
+   <receiver>testDialogBase</receiver>
+   <slot>reject()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>20</x>
+     <y>20</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>20</x>
+     <y>20</y>
+    </hint>
+   </hints>
+  </connection>
+ </connections>
 </ui>
