--- a/MatrixModule_dialog_base.ui
+++ b/MatrixModule_dialog_base.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>401</width>
+    <width>604</width>
     <height>302</height>
    </rect>
   </property>
@@ -16,7 +16,7 @@
   <widget class="QDialogButtonBox" name="button_box">
    <property name="geometry">
     <rect>
-     <x>30</x>
+     <x>240</x>
      <y>260</y>
      <width>341</width>
      <height>32</height>
@@ -34,7 +34,7 @@
     <rect>
      <x>20</x>
      <y>10</y>
-     <width>361</width>
+     <width>561</width>
      <height>31</height>
     </rect>
    </property>
@@ -59,7 +59,7 @@
      <rect>
       <x>80</x>
       <y>0</y>
-      <width>281</width>
+      <width>421</width>
       <height>31</height>
      </rect>
     </property>
@@ -71,7 +71,7 @@
       <rect>
        <x>0</x>
        <y>0</y>
-       <width>279</width>
+       <width>419</width>
        <height>29</height>
       </rect>
      </property>
@@ -83,7 +83,7 @@
     <rect>
      <x>20</x>
      <y>50</y>
-     <width>361</width>
+     <width>561</width>
      <height>31</height>
     </rect>
    </property>
@@ -108,7 +108,7 @@
      <rect>
       <x>80</x>
       <y>0</y>
-      <width>281</width>
+      <width>421</width>
       <height>31</height>
      </rect>
     </property>
@@ -120,11 +120,24 @@
       <rect>
        <x>0</x>
        <y>0</y>
-       <width>279</width>
+       <width>419</width>
        <height>29</height>
       </rect>
      </property>
     </widget>
+   </widget>
+   <widget class="QPushButton" name="b2">
+    <property name="geometry">
+     <rect>
+      <x>510</x>
+      <y>0</y>
+      <width>51</width>
+      <height>32</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>...</string>
+    </property>
    </widget>
   </widget>
   <widget class="QGroupBox" name="groupBox_3">
@@ -132,7 +145,7 @@
     <rect>
      <x>20</x>
      <y>90</y>
-     <width>361</width>
+     <width>561</width>
      <height>31</height>
     </rect>
    </property>
@@ -157,7 +170,7 @@
      <rect>
       <x>80</x>
       <y>0</y>
-      <width>281</width>
+      <width>421</width>
       <height>31</height>
      </rect>
     </property>
@@ -169,11 +182,24 @@
       <rect>
        <x>0</x>
        <y>0</y>
-       <width>279</width>
+       <width>419</width>
        <height>29</height>
       </rect>
      </property>
     </widget>
+   </widget>
+   <widget class="QPushButton" name="b3">
+    <property name="geometry">
+     <rect>
+      <x>510</x>
+      <y>0</y>
+      <width>51</width>
+      <height>32</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>...</string>
+    </property>
    </widget>
   </widget>
   <widget class="QGroupBox" name="groupBox_4">
@@ -181,7 +207,7 @@
     <rect>
      <x>20</x>
      <y>130</y>
-     <width>361</width>
+     <width>561</width>
      <height>31</height>
     </rect>
    </property>
@@ -206,7 +232,7 @@
      <rect>
       <x>80</x>
       <y>0</y>
-      <width>281</width>
+      <width>421</width>
       <height>31</height>
      </rect>
     </property>
@@ -218,11 +244,24 @@
       <rect>
        <x>0</x>
        <y>0</y>
-       <width>279</width>
+       <width>419</width>
        <height>29</height>
       </rect>
      </property>
     </widget>
+   </widget>
+   <widget class="QPushButton" name="b4">
+    <property name="geometry">
+     <rect>
+      <x>510</x>
+      <y>0</y>
+      <width>51</width>
+      <height>32</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>...</string>
+    </property>
    </widget>
   </widget>
   <widget class="QGroupBox" name="groupBox_5">
@@ -230,7 +269,7 @@
     <rect>
      <x>20</x>
      <y>170</y>
-     <width>361</width>
+     <width>561</width>
      <height>31</height>
     </rect>
    </property>
@@ -255,7 +294,7 @@
      <rect>
       <x>80</x>
       <y>0</y>
-      <width>281</width>
+      <width>421</width>
       <height>31</height>
      </rect>
     </property>
@@ -267,11 +306,24 @@
       <rect>
        <x>0</x>
        <y>0</y>
-       <width>279</width>
+       <width>419</width>
        <height>29</height>
       </rect>
      </property>
     </widget>
+   </widget>
+   <widget class="QPushButton" name="b5">
+    <property name="geometry">
+     <rect>
+      <x>510</x>
+      <y>0</y>
+      <width>51</width>
+      <height>32</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>...</string>
+    </property>
    </widget>
   </widget>
   <widget class="QGroupBox" name="groupBox_6">
@@ -279,7 +331,7 @@
     <rect>
      <x>20</x>
      <y>210</y>
-     <width>361</width>
+     <width>561</width>
      <height>31</height>
     </rect>
    </property>
@@ -304,7 +356,7 @@
      <rect>
       <x>80</x>
       <y>0</y>
-      <width>281</width>
+      <width>421</width>
       <height>31</height>
      </rect>
     </property>
@@ -316,12 +368,38 @@
       <rect>
        <x>0</x>
        <y>0</y>
-       <width>279</width>
+       <width>419</width>
        <height>29</height>
       </rect>
      </property>
     </widget>
    </widget>
+   <widget class="QPushButton" name="b6">
+    <property name="geometry">
+     <rect>
+      <x>510</x>
+      <y>0</y>
+      <width>51</width>
+      <height>32</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>...</string>
+    </property>
+   </widget>
+  </widget>
+  <widget class="QPushButton" name="b1">
+   <property name="geometry">
+    <rect>
+     <x>530</x>
+     <y>10</y>
+     <width>51</width>
+     <height>32</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>...</string>
+   </property>
   </widget>
  </widget>
  <resources/>
