--- a/MatrixModule_dialog_base.ui
+++ b/MatrixModule_dialog_base.ui
@@ -54,28 +54,15 @@
      <string>Raste 1</string>
     </property>
    </widget>
-   <widget class="QScrollArea" name="inputL1">
+   <widget class="QTextEdit" name="inputL1">
     <property name="geometry">
      <rect>
-      <x>80</x>
+      <x>90</x>
       <y>0</y>
-      <width>421</width>
+      <width>411</width>
       <height>31</height>
      </rect>
     </property>
-    <property name="widgetResizable">
-     <bool>true</bool>
-    </property>
-    <widget class="QWidget" name="scrollAreaWidgetContents">
-     <property name="geometry">
-      <rect>
-       <x>0</x>
-       <y>0</y>
-       <width>419</width>
-       <height>29</height>
-      </rect>
-     </property>
-    </widget>
    </widget>
   </widget>
   <widget class="QGroupBox" name="groupBox_2">
@@ -103,29 +90,6 @@
      <string>Raste 2</string>
     </property>
    </widget>
-   <widget class="QScrollArea" name="inputL2">
-    <property name="geometry">
-     <rect>
-      <x>80</x>
-      <y>0</y>
-      <width>421</width>
-      <height>31</height>
-     </rect>
-    </property>
-    <property name="widgetResizable">
-     <bool>true</bool>
-    </property>
-    <widget class="QWidget" name="scrollAreaWidgetContents_2">
-     <property name="geometry">
-      <rect>
-       <x>0</x>
-       <y>0</y>
-       <width>419</width>
-       <height>29</height>
-      </rect>
-     </property>
-    </widget>
-   </widget>
    <widget class="QPushButton" name="b2">
     <property name="geometry">
      <rect>
@@ -137,6 +101,16 @@
     </property>
     <property name="text">
      <string>...</string>
+    </property>
+   </widget>
+   <widget class="QTextEdit" name="inputL2">
+    <property name="geometry">
+     <rect>
+      <x>90</x>
+      <y>0</y>
+      <width>411</width>
+      <height>31</height>
+     </rect>
     </property>
    </widget>
   </widget>
@@ -165,29 +139,6 @@
      <string>Raste 3</string>
     </property>
    </widget>
-   <widget class="QScrollArea" name="inputL3">
-    <property name="geometry">
-     <rect>
-      <x>80</x>
-      <y>0</y>
-      <width>421</width>
-      <height>31</height>
-     </rect>
-    </property>
-    <property name="widgetResizable">
-     <bool>true</bool>
-    </property>
-    <widget class="QWidget" name="scrollAreaWidgetContents_3">
-     <property name="geometry">
-      <rect>
-       <x>0</x>
-       <y>0</y>
-       <width>419</width>
-       <height>29</height>
-      </rect>
-     </property>
-    </widget>
-   </widget>
    <widget class="QPushButton" name="b3">
     <property name="geometry">
      <rect>
@@ -199,6 +150,16 @@
     </property>
     <property name="text">
      <string>...</string>
+    </property>
+   </widget>
+   <widget class="QTextEdit" name="inputL3">
+    <property name="geometry">
+     <rect>
+      <x>90</x>
+      <y>0</y>
+      <width>411</width>
+      <height>31</height>
+     </rect>
     </property>
    </widget>
   </widget>
@@ -227,29 +188,6 @@
      <string>Raste 4</string>
     </property>
    </widget>
-   <widget class="QScrollArea" name="inputL4">
-    <property name="geometry">
-     <rect>
-      <x>80</x>
-      <y>0</y>
-      <width>421</width>
-      <height>31</height>
-     </rect>
-    </property>
-    <property name="widgetResizable">
-     <bool>true</bool>
-    </property>
-    <widget class="QWidget" name="scrollAreaWidgetContents_4">
-     <property name="geometry">
-      <rect>
-       <x>0</x>
-       <y>0</y>
-       <width>419</width>
-       <height>29</height>
-      </rect>
-     </property>
-    </widget>
-   </widget>
    <widget class="QPushButton" name="b4">
     <property name="geometry">
      <rect>
@@ -261,6 +199,16 @@
     </property>
     <property name="text">
      <string>...</string>
+    </property>
+   </widget>
+   <widget class="QTextEdit" name="inputL4">
+    <property name="geometry">
+     <rect>
+      <x>90</x>
+      <y>0</y>
+      <width>411</width>
+      <height>31</height>
+     </rect>
     </property>
    </widget>
   </widget>
@@ -289,29 +237,6 @@
      <string>Raste 5</string>
     </property>
    </widget>
-   <widget class="QScrollArea" name="inputL5">
-    <property name="geometry">
-     <rect>
-      <x>80</x>
-      <y>0</y>
-      <width>421</width>
-      <height>31</height>
-     </rect>
-    </property>
-    <property name="widgetResizable">
-     <bool>true</bool>
-    </property>
-    <widget class="QWidget" name="scrollAreaWidgetContents_5">
-     <property name="geometry">
-      <rect>
-       <x>0</x>
-       <y>0</y>
-       <width>419</width>
-       <height>29</height>
-      </rect>
-     </property>
-    </widget>
-   </widget>
    <widget class="QPushButton" name="b5">
     <property name="geometry">
      <rect>
@@ -323,6 +248,16 @@
     </property>
     <property name="text">
      <string>...</string>
+    </property>
+   </widget>
+   <widget class="QTextEdit" name="inputL5">
+    <property name="geometry">
+     <rect>
+      <x>90</x>
+      <y>0</y>
+      <width>411</width>
+      <height>31</height>
+     </rect>
     </property>
    </widget>
   </widget>
@@ -351,29 +286,6 @@
      <string>Raste 6</string>
     </property>
    </widget>
-   <widget class="QScrollArea" name="inputL6">
-    <property name="geometry">
-     <rect>
-      <x>80</x>
-      <y>0</y>
-      <width>421</width>
-      <height>31</height>
-     </rect>
-    </property>
-    <property name="widgetResizable">
-     <bool>true</bool>
-    </property>
-    <widget class="QWidget" name="scrollAreaWidgetContents_6">
-     <property name="geometry">
-      <rect>
-       <x>0</x>
-       <y>0</y>
-       <width>419</width>
-       <height>29</height>
-      </rect>
-     </property>
-    </widget>
-   </widget>
    <widget class="QPushButton" name="b6">
     <property name="geometry">
      <rect>
@@ -385,6 +297,16 @@
     </property>
     <property name="text">
      <string>...</string>
+    </property>
+   </widget>
+   <widget class="QTextEdit" name="inputL6">
+    <property name="geometry">
+     <rect>
+      <x>90</x>
+      <y>0</y>
+      <width>411</width>
+      <height>31</height>
+     </rect>
     </property>
    </widget>
   </widget>
