--- a/MatrixModule_dialog_base.ui
+++ b/MatrixModule_dialog_base.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>604</width>
-    <height>302</height>
+    <height>365</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -17,7 +17,7 @@
    <property name="geometry">
     <rect>
      <x>240</x>
-     <y>260</y>
+     <y>330</y>
      <width>341</width>
      <height>32</height>
     </rect>
@@ -33,7 +33,7 @@
    <property name="geometry">
     <rect>
      <x>20</x>
-     <y>10</y>
+     <y>80</y>
      <width>561</width>
      <height>31</height>
     </rect>
@@ -51,7 +51,7 @@
      </rect>
     </property>
     <property name="text">
-     <string>Raste 1</string>
+     <string>R</string>
     </property>
    </widget>
    <widget class="QTextEdit" name="inputL1">
@@ -69,7 +69,7 @@
    <property name="geometry">
     <rect>
      <x>20</x>
-     <y>50</y>
+     <y>120</y>
      <width>561</width>
      <height>31</height>
     </rect>
@@ -87,7 +87,7 @@
      </rect>
     </property>
     <property name="text">
-     <string>Raste 2</string>
+     <string>K</string>
     </property>
    </widget>
    <widget class="QPushButton" name="b2">
@@ -118,7 +118,7 @@
    <property name="geometry">
     <rect>
      <x>20</x>
-     <y>90</y>
+     <y>160</y>
      <width>561</width>
      <height>31</height>
     </rect>
@@ -136,7 +136,7 @@
      </rect>
     </property>
     <property name="text">
-     <string>Raste 3</string>
+     <string>L</string>
     </property>
    </widget>
    <widget class="QPushButton" name="b3">
@@ -167,7 +167,7 @@
    <property name="geometry">
     <rect>
      <x>20</x>
-     <y>130</y>
+     <y>200</y>
      <width>561</width>
      <height>31</height>
     </rect>
@@ -185,7 +185,7 @@
      </rect>
     </property>
     <property name="text">
-     <string>Raste 4</string>
+     <string>S</string>
     </property>
    </widget>
    <widget class="QPushButton" name="b4">
@@ -216,7 +216,7 @@
    <property name="geometry">
     <rect>
      <x>20</x>
-     <y>170</y>
+     <y>240</y>
      <width>561</width>
      <height>31</height>
     </rect>
@@ -234,7 +234,7 @@
      </rect>
     </property>
     <property name="text">
-     <string>Raste 5</string>
+     <string>C</string>
     </property>
    </widget>
    <widget class="QPushButton" name="b5">
@@ -265,7 +265,7 @@
    <property name="geometry">
     <rect>
      <x>20</x>
-     <y>210</y>
+     <y>280</y>
      <width>561</width>
      <height>31</height>
     </rect>
@@ -283,7 +283,7 @@
      </rect>
     </property>
     <property name="text">
-     <string>Raste 6</string>
+     <string>P</string>
     </property>
    </widget>
    <widget class="QPushButton" name="b6">
@@ -314,13 +314,26 @@
    <property name="geometry">
     <rect>
      <x>530</x>
-     <y>10</y>
+     <y>80</y>
      <width>51</width>
      <height>32</height>
     </rect>
    </property>
    <property name="text">
     <string>...</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_7">
+   <property name="geometry">
+    <rect>
+     <x>210</x>
+     <y>30</y>
+     <width>131</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>A = R * K * L*S * C * P</string>
    </property>
   </widget>
  </widget>
